--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@ BEST FRIEND : </b><marquee scrollamount="6" direction="left" width="60%"></marqu
 <td align=center>
 <span style='font: 15px Courier;size:15px;color:#9E9E9E;'>
 <strong>
-<marquee behavior="alternate" scrollamount="5" style="border:1px solid;" width="80%"><font color="gold" face="courier">-----------=|[ Tn Irza ~ JaeXploit ~ Bawbaba ~ Akmal ~ Waryo ~ Mr Jack ~ Xenji-Chan ~ Iqball ~ Rhandika ~ Dimas ~ Xsashii ~ X-spiter ~ Mr Tank ~ UnionX5733 ~ GerryVandetta ~ NeroGanzs ~ Mr ReyCyber404 ~ Mr Sadboi ~ BanjarNegara ~ 777GhostApocallSype-Crew ~ Ular Sawah ~ DragonXploiterArmy ~ Meme Cyber Team ~ CyberSederhanaTeam ~ Dan You..... ~ ]|=-----------</center></font></marquee></div>
+<marquee behavior="alternate" scrollamount="5" style="border:1px solid;" width="80%"><font color="gold" face="courier">-----------=|[ Tn Irza ~ JaeXploit ~ Bawbaba ~ Akmal ~ Waryo ~ Mr Jack ~ Xenji-Chan ~ Iqball ~ Rhandika ~ Dimas ~ Xsashii ~ X-spiter ~ Mr Tank ~ UnionX5733 ~ GerryVandetta ~ NeroGanzs ~ AriyanXploit404 ~ Mr ReyCyber404 ~ Mr Sadboi ~ BanjarNegara ~ 777GhostApocallSype-Crew ~ Ular Sawah ~ DragonXploiterArmy ~ Meme Cyber Team ~ CyberSederhanaTeam ~ Dan You..... ~ ]|=-----------</center></font></marquee></div>
 
 
 </font></p>
