--- a/chat.html
+++ b/chat.html
@@ -1,1 +1,4 @@
+<!Doctype html>
+<html>
 <iframe src="https://www5.cbox.ws/box/?boxid=942842&boxtag=PbehRU" width="100%" height="450" allowtransparency="yes" allow="autoplay" frameborder="0" marginheight="0" marginwidth="0" scrolling="auto"></iframe>	
+</html>
